lesson2: switch in java 12/13